--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -90,6 +90,8 @@ dependencies:
   photofilters: ^3.0.1
   ## My package
   custom_gallery_display: ^0.3.4
+  firebase_messaging: ^12.0.2
+  flutter_local_notifications: ^9.7.0
 #    path: custom_gallery_display-1
 
 dev_dependencies:
